<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutProfile">

    <!-- Container Content -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout">

        <!-- Content -->
        <RelativeLayout
            android:id="@+id/card_view"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingBottom="30dp"
                android:paddingHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bottom_sheet">

                <!-- Name -->
                <TextView
                    android:id="@+id/bs_profile_name"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:layout_marginTop="68dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackOrigin"
                    android:fontFamily="@font/montserrat_semi_bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

                <!-- Label mobile -->
                <TextView
                    android:id="@+id/label_mobile"
                    android:text="@string/mobile"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackOrigin"
                    android:fontFamily="@font/montserrat_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bs_profile_name" />

                <!-- Mobile -->
                <TextView
                    android:id="@+id/bs_profile_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="18sp"
                    android:textColor="@color/blackSoft"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_mobile" />

                <!-- Address -->
                <TextView
                    android:id="@+id/label_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="GENDER"
                    android:textColor="@color/blackOrigin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bs_profile_mobile" />

                <!-- Gender -->
                <TextView
                    android:id="@+id/bs_profile_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="18sp"
                    android:textColor="@color/blackSoft"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_gender" />

                <!-- Label Address -->
                <TextView
                    android:id="@+id/label_address"
                    android:text="@string/address"
                    android:layout_marginTop="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackOrigin"
                    android:fontFamily="@font/montserrat_bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bs_profile_gender" />

                <!-- Address -->
                <TextView
                    android:id="@+id/bs_profile_address"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blackSoft"
                    android:fontFamily="@font/montserrat_regular"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_address" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>

        <!-- Image -->
        <LinearLayout
            android:id="@+id/bs_profile_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/img_contact"
            android:gravity="center">

            <TextView
                android:id="@+id/bs_profile_name_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blueOrigin"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

    <!-- Navigation -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:elevation="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <!-- Edit -->
        <Button
            android:id="@+id/bs_profile_edit_button"
            android:textSize="12sp"
            android:text="@string/edit"
            android:layout_marginEnd="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blackOrigin"
            android:drawableTop="@drawable/ic_pencil"
            android:fontFamily="@font/montserrat_medium"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Delete -->
        <Button
            android:id="@+id/bs_profile_delete_button"
            android:textSize="12sp"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:textColor="@color/blackOrigin"
            android:drawableTop="@drawable/ic_trash"
            android:windowSoftInputMode="adjustResize"
            android:fontFamily="@font/montserrat_medium"
            style="?android:attr/borderlessButtonStyle"
            app:iconTint="@color/blueSoft"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>